--- a/roles/dataloop-agent/templates/dataloop-agent.yaml.j2
+++ b/roles/dataloop-agent/templates/dataloop-agent.yaml.j2
@@ -12,7 +12,10 @@ api-key: {{ dataloop_api_key }}
 server: wss://agent.dataloop.io
 
 ##  set tags to a comma separated list of tags applied to this agent
-#tags:
+{% if dataloop_tags is defined %}
+tags: {{ dataloop_tags }}
+{% endif %}
+
 
 ## Set if you would like a custom name for this agent. Default is hostname
 #name:
